// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepIndicator > should limit active index to max number of steps 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <div
      class="mb-3 flex flex-col gap-1.5"
    >
      <span
        class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 inline-block text-lg leading-[21px] font-semibold sm:hidden"
      >
        3
      </span>
    </div>
    <ul
      class="flex flex-row gap-2"
    >
      <li
        class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
      />
      <li
        class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
      />
      <li
        class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should not render with an empty steps array 1`] = `<DocumentFragment />`;

exports[`StepIndicator > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <div
      class="mb-3 flex flex-col gap-1.5"
    >
      <span
        class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 inline-block text-lg leading-[21px] font-semibold sm:hidden"
      >
        1
      </span>
    </div>
    <ul
      class="flex flex-row gap-2"
    >
      <li
        class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
      />
      <li
        class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700"
      />
      <li
        class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should render witth active index defined 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <div
      class="mb-3 flex flex-col gap-1.5"
    >
      <span
        class="text-theme-secondary-900 dark:text-theme-dark-50 dim:text-theme-dim-50 inline-block text-lg leading-[21px] font-semibold sm:hidden"
      >
        2
      </span>
    </div>
    <ul
      class="flex flex-row gap-2"
    >
      <li
        class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
      />
      <li
        class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
      />
      <li
        class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800 dim:bg-theme-dim-700"
      />
    </ul>
  </div>
</DocumentFragment>
`;
